--- a/pokedex/.env
+++ b/pokedex/.env
@@ -1,1 +1,1 @@
-REACT_APP_POKEMON_API_ADDRESS=http://pokedex.jhonnymichel.com/pokemon
+REACT_APP_POKEMON_API_ADDRESS=http://pokedex.jhonnymichel.com/pokemon?
