--- a/pokedex/src/.vscode/settings.json
+++ b/pokedex/src/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "editor.rulers": [100],
   "editor.tabSize": 2
 }
