--- a/pokedex/.env
+++ b/pokedex/.env
@@ -3,3 +3,5 @@ REACT_APP_POKEMON_API_ADDRESS=http://pokedex.jhonnymichel.com/pokemon?
 REACT_APP_TYPE_API_ADDRESS=http://pokedex.jhonnymichel.com/type
 
 REACT_APP_MOVE_API_ADDRESS=http://pokedex.jhonnymichel.com/move
+
+REACT_APP_ABILITY_API_ADDRESS=http://pokedex.jhonnymichel.com/ability
