--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,9 +53,8 @@ jobs:
           message: |
             <b>The test pipeline has failed</b> 🆘
 
-            <a href="https://github.com/jhonnymichel/teodorico-academy/actions/runs/${{github.run_id}}">
-              <i>${{github.event.head_commit.message}}</i>
-            </a>
+            ${{github.sha}}
+            <a href="https://github.com/jhonnymichel/teodorico-academy/actions/runs/${{github.run_id}}"><i>${{github.event.head_commit.message}}</i></a>
             by 🧑‍💻 ${{github.event.head_commit.author.name}}
 
             Please fix it before continuing!
@@ -69,7 +68,6 @@ jobs:
           message: |
             <b>Build successfull!</b> ✅
 
-            <a href="https://github.com/jhonnymichel/teodorico-academy/actions/runs/${{github.run_id}}">
-              <i>${{github.event.head_commit.message}}</i>
-            </a>
+            ${{github.sha}}
+            <a href="https://github.com/jhonnymichel/teodorico-academy/actions/runs/${{github.run_id}}"><i>${{github.event.head_commit.message}}</i></a>
             by 🧑‍💻 ${{github.event.head_commit.author.name}}
