--- a/pokedex/.env
+++ b/pokedex/.env
@@ -6,4 +6,4 @@ REACT_APP_MOVE_API_ADDRESS=http://pokedex.jhonnymichel.com/move
 
 REACT_APP_ABILITY_API_ADDRESS=http://pokedex.jhonnymichel.com/ability
 
-REACT_APP_DETAILS_PAGE_ADDRESS=http://pokedex.jhonnymichel.com/pokemon
+REACT_APP_DETAILS_PAGE_ADDRESS=http://pokedex.jhonnymichel.com/v2/pokemon
